namespace KPG.Timesheet.Domain.Common;

public abstract class BaseEntity
{
    public int Id { get; set; }
}
