namespace KPG.Timesheet.Domain.Enums;

public enum EstadoSolicitud
{
    Pendiente = 1,
    Aprobada = 2,
    Rechazada = 3
}
